@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2004-12-22 19:49:29 GMT	John Goerzen <jgoerzen@complete.org>	patch-147
+
+    Summary:
+      Checkpointing port support
+    Revision:
+      missingh--head--0.7--patch-147
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/Network/FTP/Server.hs
+
+
 2004-12-22 19:36:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-146
 
     Summary:
